NOJIRA: Resolves vertical alignment issue w/ primary nav links at mobile breakpoints.

--- a/client/src/styles/landmarks/_sidebar.scss
+++ b/client/src/styles/landmarks/_sidebar.scss
@@ -9,6 +9,7 @@
 }
 
 .sidebar-links {
+  align-items: center;
   background-color: $color-white;
   display: flex;
   font-size: 16px;
